# apply-faster

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/applai/: cli.py
src/applai/bootstrap/: browser.py  run.py
src/applai/linkedin/: extractor.py
src/applai/log/: runtime.py
src/applai/record/: run.py
src/apply_faster/: cli.py  paths.py  setup.py
src/apply_faster/bootstrap/: browser.py  run.py
src/apply_faster/linkedin/: extractor.py  normalizer.py
src/apply_faster/log/: runtime.py
src/apply_faster/record/: __init__.py  application_log.py  csv_export.py  models.py  reporting.py  runner.py  validators.py
src/apply_faster/web/: observer.py  server.py  state.py
src/apply_faster/web/templates/: index.html
